# mcp_testbench

./: .gitignore  DYNAMIC_SCHEMA_UPDATE.md  MODEL_UPDATE_SUMMARY.md  QUICKSTART.md  README.md  README_PANDAS_AGENT.md  chatbot_mcp_client_multiserver.py  code.py  config.py  create_sample_data.py  mcp_client_agent.py  mcp_client_thinking_v1.py  mcp_server_pandas.py  package-lock.json  pyproject.toml  run_agent.sh  sample_transactions.csv  server_config_memory.json  test_agent.py  test_api_key.py  test_dynamic_schema.py  test_local_tools.py  test_local_tools_simple.py  test_mcp_connectivity.py
clustering/: generate_test_data.py
experiments/: README.md  mcp_client_thinking.py  server_config_thinking.json
fintech_junkie/: .gitignore  README.md  pyproject.toml  spec.md
fintech_junkie/docs/: SESSION_SUMMARY.md  architecture.md  programmatic_tool_calling.md
fintech_junkie/src/agent/: classifier.py  conversation.py  programmatic_agent.py
fintech_junkie/src/financial_tools_server/: server.py
fintech_junkie/src/financial_tools_server/tools/: contract_lookup.py
fintech_junkie/src/transaction_analysis/: SKILL.md  server.py
fintech_junkie/src/transaction_analysis/scripts/: kmeans_algorithm.py  sorting_algorithm.py
long_running_agent/: README.md  agents.py  api.py  harness.py  pyproject.toml  report.py
pdf_parser/: CLAUDE_VISION.md  README.md  SESSION_CONTEXT.md  pyproject.toml  test_claude_vision.sh
pdf_parser/pdf_parser/: main.py
pdf_parser/pdf_parser/core/: config.py
pdf_parser/pdf_parser/models/: document.py
pdf_parser/pdf_parser/parsers/: base.py  claude_vision_parser.py  pdfplumber_parser.py  pymupdf_parser.py
pdf_parser/pdf_parser/services/: export_service.py  parser_service.py
pdf_parser/pdf_parser/utils/: file_handler.py  markdown_builder.py  pdf_detector.py
recon_agent/: .env.example  .gitignore  README.md  SESSION_SUMMARY.md  main.py  pyproject.toml  run_verification.sh
recon_agent/agent/: core.py
recon_agent/agent/models/: contract.py  report.py  transaction.py
recon_agent/agent/tools/: contract_loader.py  excel_loader.py  fee_calculator.py  fee_verifier.py  field_detector.py  report_generator.py  rr_calculator.py
recon_agent/data/: Agreement_FINTHESIS_DIRMENION LTD.docx.pdf.json  DIRMENION LTD.xlsx  WEBNORUS_LIMITED_PAYMENT_MANAGEMENT_SERVICES_AGREEMENT.pdf.json  Webnorus Limited.xlsx
sql_agent/: .env.example  .gitignore  QUICKSTART.md  (+13 more)
transaction_analysis/: .env.example  .gitignore  AGENT_TOOL_ARCHITECTURE.md  ARCHITECTURE.md  CLAUDE_INTEGRATION.md  ERROR_HANDLING.md  IMPLEMENTATION_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REPORT_FORMATS.md  SEMANTIC_MAPPING.md  UV_SETUP_COMPLETE.md  UV_USAGE.md  main.py  parsed_contract.json  pyproject.toml  requirements.txt  run.sh  setup.sh  test_discrepancy_sum.py  test_export_sum.py  test_report_integration.py  test_setup.py  transaction_table.csv
transaction_analysis/agent/: __init__.py  core.py
transaction_analysis/agent/tools/: __init__.py  contract_matcher.py  data_loader.py  fee_calculator.py  field_mapper.py  report_generator.py
ui_renderer/backend/: .env.example  README.md  pyproject.toml
ui_renderer/backend/app/: __init__.py  main.py
ui_renderer/backend/app/api/: routes.py
ui_renderer/backend/app/core/: config.py
ui_renderer/backend/app/schemas/: __init__.py  component_spec.py  contract.py
ui_renderer/backend/app/services/: __init__.py  ai_service.py  contract_service.py  demo_specs.py
(+40 files in other folders)
