[project]
name = "fintech-junkie"
version = "0.1.0"
description = "Financial Analysis Agentic System"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastmcp>=0.4.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pypdf>=4.0.0",
    "rapidfuzz>=3.0.0",
]

[project.scripts]
fintech-agent = "src.agent.conversation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
